<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="ChangePasswordVM"
            type="com.example.dev.hawaiat.viewModels.ChangePasswordVM" />
    </data>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.dev.hawaiat.views.ChangePassword">

    <TextView
        android:id="@+id/textView"
        android:layout_width="167dp"
        android:layout_height="41dp"
        android:layout_marginEnd="187dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/old_password"
        android:textColor="@color/petrol"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/oldPassword"
        android:layout_width="342dp"
        android:layout_height="54dp"
        android:layout_marginEnd="21dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/material_amber_900"
        android:drawableStart="@drawable/ic_action_name"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@={ChangePasswordVM.oldPassword}"
        android:textAlignment="center"
        android:textColor="@color/petrol"
        android:textSize="12pt"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="113dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="167dp"
        android:layout_height="41dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/new_password"
        android:textColor="@color/petrol"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oldPassword"
        tools:layout_editor_absoluteX="187dp"
        tools:layout_editor_absoluteY="187dp" />

    <EditText
        android:id="@+id/confirmNewPassword"
        android:layout_width="342dp"
        android:layout_height="54dp"
        android:layout_marginEnd="21dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/material_amber_900"
        android:drawableStart="@drawable/ic_action_name"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@={ChangePasswordVM.confirmPassword}"
        android:textAlignment="center"
        android:textColor="@color/petrol"
        android:textSize="12pt"
        app:error="@{ChangePasswordVM.errorConfirmPassword}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="347dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="246dp"
        android:layout_height="41dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/Confirm_password"
        android:textColor="@color/petrol"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPassword"
        tools:layout_editor_absoluteX="187dp"
        tools:layout_editor_absoluteY="294dp" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="342dp"
        android:layout_height="54dp"
        android:layout_marginEnd="21dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/material_amber_900"
        android:drawableStart="@drawable/ic_action_name"
        android:ems="10"
        android:inputType="textPassword"

        android:text="@={ChangePasswordVM.newPassword}"
        android:textAlignment="center"
        android:textColor="@color/petrol"
        android:textSize="12pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="240dp" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="293dp"
        android:layout_height="51dp"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="45dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="29dp"
        android:background="@drawable/corner"
        android:onClick="@{(v)->ChangePasswordVM.onSavedClick(v)}"
        android:text="@string/save_btn"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmNewPassword"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="430dp" />

</android.support.constraint.ConstraintLayout>
</layout>