<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="ForgetPasswordVM"
            type="com.example.dev.hawaiat.ViewModel.ForgetPasswordVM" />
    </data>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:background="@color/background"
        tools:context="com.example.dev.hawaiat.views.ForgetPassword">

        <ImageView
        android:id="@+id/imageView"
        android:layout_width="114dp"
        android:layout_height="96dp"
        android:layout_marginEnd="156dp"
            android:layout_marginStart="156dp"
        android:layout_marginTop="64dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="115dp"
        android:layout_height="25dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:text="@string/new_password"
        android:textColor="@color/petrol"
        android:textSize="7pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/orange"
        android:drawableStart="@drawable/ic_action_name"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@={ForgetPasswordVM.confirmPassword}"
        android:textAlignment="center"
        android:textColor="@color/petrol"
        android:textSize="12pt"
        app:error="@{ForgetPasswordVM.errorMatch}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/userPassword"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/orange"
        android:drawableStart="@drawable/ic_action_name"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@={ForgetPasswordVM.userPassword}"
        android:textAlignment="center"
        android:textColor="@color/petrol"
        android:textSize="12pt"
        app:error="@{ForgetPasswordVM.errorPassword}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="188dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:text="@string/Confirm_password"
        android:textColor="@color/petrol"
        android:textSize="7pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userPassword" />

    <Button
        android:id="@+id/saveForgetPass"
        android:layout_width="293dp"
        android:layout_height="51dp"
        android:layout_marginBottom="41dp"
        android:layout_marginEnd="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="49dp"
        android:background="@drawable/corner"
        android:onClick="@{(v)->ForgetPasswordVM.onSaveClicked(v)}"
        android:text="@string/save_btn"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassword"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="420dp" />

</android.support.constraint.ConstraintLayout>
</layout>